flux/apps/forgejo-next-v9/forgejo-route.yaml
# Route from traefik to forgejo
# https://doc.traefik.io/traefik/v3.1/routing/providers/kubernetes-crd/#kind-ingressroutetcp
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-next-ssh-v9
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - ssh-next-v9 # name from traefik port
  routes:
    - match: HostSNI(`*`)
      services:
        # Created by the helm chart and named after it with <releaseName>-ssh
        - name: forgejo-v9-ssh
          port: ssh # forgejo ssh port on kubernetes service
